<resources>
    <string name="app_name">FlexBook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_reader">ReaderActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">Flex Book</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Flex Book</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="delete">Удалить</string>

    <string name="menu_books">Библиотека</string>
    <string name="menu_settings">Настройки</string>
    <string name="book_cover">book_cover</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>

    <!-- Preference Titles -->
    <string name="style_header">Оформление</string>
    <string name="books_header">Список книг</string>
    <string name="reader_header">Ридер</string>

    <string name="night_mode_title">Ночной режим</string>
    <string name="background_color_title">Цвет фона</string>
    <string name="text_color_title">Цвет текста</string>
    <string name="text_size_title">Размер шрифта</string>
    <string name="margin_title">Отступ от краев</string>
    <string name="language_title">Целевой язык</string>
    <string name="start_padding_title">Отступ первой строки</string>
    <string name="zero">0</string>
    <string name="pref_reset">Сброс настроек</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu consectetur diam, vel varius nulla.\n
        Nullam consectetur risus et malesuada laoreet. Aenean elementum risus sit amet justo ultrices, in ultrices diam semper. Mauris et orci ante.\n
        Nam tempus mi at lacus interdum bibendum in nec metus. Praesent lorem diam, iaculis id luctus eu, porta nec justo. Cras non mauris felis.\n
        Etiam id congue dolor. Cras dictum, odio non pulvinar dictum, neque augue viverra risus, quis euismod felis nibh id lectus.\n
        Donec varius dui et eros mollis, ut vulputate nunc condimentum.\n
        Aliquam vulputate turpis nisi. Pellentesque vulputate auctor diam iaculis tincidunt. Praesent lectus turpis, iaculis nec bibendum vel, fermentum in magna. Duis mattis rutrum tempor.\n
        Suspendisse potenti. \n
        Fusce sit amet malesuada lorem, vitae faucibus magna. \n
        Integer rhoncus metus imperdiet, ultrices nisl eu, interdum purus. \n
        Sed a augue eget justo vestibulum scelerisque eu at ante. Phasellus eu lobortis ipsum. \n
        Duis in mi non leo volutpat ultricies id ut massa. Vestibulum sed nibh ac erat congue interdum. Phasellus faucibus eu sem ut interdum.\n
        Ut sed volutpat velit. Phasellus fringilla velit at imperdiet interdum. Fusce pretium neque a auctor pellentesque. Nunc et dui mollis, viverra felis non, venenatis odio. Donec et aliquet est. Donec auctor leo et ipsum commodo aliquet. In pretium fermentum tellus, sit amet porta ante viverra ac. \n
        Praesent lacinia efficitur sem, eu scelerisque nulla molestie id. Nam tristique ante ut risus congue, id sollicitudin mauris sagittis. \n
        In hac habitasse platea dictumst. In non tortor tempor magna blandit aliquet eu vitae augue. Duis sit amet malesuada ante, nec suscipit nisi. Praesent tincidunt nibh ac turpis ultricies, id aliquam nisl accumsan. Vestibulum luctus mi vitae massa fermentum commodo. \n
        Donec tristique eleifend mi sit amet tempor. Duis tempus ante quam, non viverra velit dignissim nec.\n
        Phasellus nisi quam, sagittis at varius id, mollis nec arcu. Sed at nulla tincidunt, ullamcorper erat quis, vulputate risus. \n
        Aliquam eget metus vel lacus fringilla tincidunt ultrices vitae leo. Nam eros eros, laoreet ut ex at, varius vehicula massa. In venenatis tincidunt elit non luctus. \n
        Morbi elementum, massa vel accumsan gravida, massa libero commodo velit, quis semper sapien leo sed tortor. Donec sit amet nisl nulla. \n
        Sed ultrices leo ut elit vehicula malesuada. Nunc eget felis vitae ligula fringilla tristique. Etiam lectus dolor, imperdiet id purus a, consectetur lobortis magna. \n
        Sed lacinia fermentum dui, non pharetra nibh feugiat ut.\n
                Fusce sit amet malesuada lorem, vitae faucibus magna. \n
        Integer rhoncus metus imperdiet, ultrices nisl eu, interdum purus. \n
        Sed a augue eget justo vestibulum scelerisque eu at ante. Phasellus eu lobortis ipsum. \n
        Duis in mi non leo volutpat ultricies id ut massa. Vestibulum sed nibh ac erat congue interdum. Phasellus faucibus eu sem ut interdum.\n
        Ut sed volutpat velit. Phasellus fringilla velit at imperdiet interdum. Fusce pretium neque a auctor pellentesque. Nunc et dui mollis, viverra felis non, venenatis odio. Donec et aliquet est. Donec auctor leo et ipsum commodo aliquet. In pretium fermentum tellus, sit amet porta ante viverra ac. Praesent lacinia efficitur sem, eu scelerisque nulla molestie id. Nam tristique ante ut risus congue, id sollicitudin mauris sagittis. \n
        In hac habitasse platea dictumst. In non tortor tempor magna blandit aliquet eu vitae augue. Duis sit amet malesuada ante, nec suscipit nisi. Praesent tincidunt nibh ac turpis ultricies, id aliquam nisl accumsan. Vestibulum luctus mi vitae massa fermentum commodo. Donec tristique eleifend mi sit amet tempor. Duis tempus ante quam, non viverra velit dignissim nec.\n
        Phasellus nisi quam, sagittis at varius id, mollis nec arcu. Sed at nulla tincidunt, ullamcorper erat quis, vulputate risus. \n
        Aliquam eget metus vel lacus fringilla tincidunt ultrices vitae leo. Nam eros eros, laoreet ut ex at, varius vehicula massa. In venenatis tincidunt elit non luctus. \n
        Morbi elementum, massa vel accumsan gravida, massa libero commodo velit, quis semper sapien leo sed tortor. Donec sit amet nisl nulla. \n
        Sed ultrices leo ut elit vehicula malesuada. Nunc eget felis vitae ligula fringilla tristique. Etiam lectus dolor, imperdiet id purus a, consectetur lobortis magna. \n
        Sed lacinia fermentum dui, non pharetra nibh feugiat ut.
</string>
</resources>