<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.FlexBook">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:text="@string/style_header"
            android:textColor="?attr/textFillColor"
            android:textSize="22sp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".85"
            android:clickable="false"
            android:text="@string/night_mode_title"
            android:textColor="?attr/textFillColor" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/preferences_night"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:clickable="false"
            android:text="@string/language_title"
            android:textColor="?attr/textFillColor" />

        <Spinner
            android:id="@+id/preferences_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:theme="@style/Theme.FlexBook.Spinner" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:text="@string/reader_header"
            android:textColor="?attr/textFillColor"
            android:textSize="17sp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:clickable="false"
            android:text="@string/margin_title"
            android:textColor="?attr/textFillColor" />

        <SeekBar
            android:id="@+id/reader_margin_seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5" />

        <TextView
            android:id="@+id/reader_margin_seekbar_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:clickable="false"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="?attr/textFillColor" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:clickable="false"
            android:text="@string/start_padding_title"
            android:textColor="?attr/textFillColor" />

        <SeekBar
            android:id="@+id/reader_start_seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5" />

        <TextView
            android:id="@+id/reader_start_seekbar_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:clickable="false"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="?attr/textFillColor" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:clickable="false"
            android:text="@string/text_size_title"
            android:textColor="?attr/textFillColor" />

        <SeekBar
            android:id="@+id/reader_text_size_seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5" />

        <TextView
            android:id="@+id/reader_text_size_seekbar_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:clickable="false"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="?attr/textFillColor" />

    </TableRow>

</TableLayout>